--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.1.5) UNRELEASED; urgency=medium
+debhelper (11.1.5~alpha1) UNRELEASED; urgency=medium
 
   * dh_installdocs: Add missing documentation about --sourcedir
     in compat 11.
@@ -32,6 +32,8 @@ debhelper (11.1.5) UNRELEASED; urgency=medium
     that the current binutils is installed for other reasons
     any way.  Thanks to Helmut Grohne for the report.
     (Closes: #891187)
+  * Dh_Lib: Add an experimental feature to determine the requested
+    compat level from the Build-Depends field.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 04 Feb 2018 18:03:34 +0000
 
