--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.1.5~alpha1) UNRELEASED; urgency=medium
+debhelper (11.1.5~alpha1) experimental; urgency=medium
 
   * dh_installdocs: Add missing documentation about --sourcedir
     in compat 11.
@@ -35,7 +35,7 @@ debhelper (11.1.5~alpha1) UNRELEASED; urgency=medium
   * Dh_Lib: Add an experimental feature to determine the requested
     compat level from the Build-Depends field.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 04 Feb 2018 18:03:34 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 24 Feb 2018 16:01:31 +0000
 
 debhelper (11.1.4) unstable; urgency=medium
 
