--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (11.1.5) UNRELEASED; urgency=medium
+
+  * Add a warning for using the new experimental feature for
+    requesting the compat level via the Build-Depends field.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 25 Feb 2018 09:49:57 +0000
+
 debhelper (11.1.5~alpha1) experimental; urgency=medium
 
   * dh_installdocs: Add missing documentation about --sourcedir
