--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-debhelper (11.1.5) UNRELEASED; urgency=medium
+debhelper (11.1.5) unstable; urgency=medium
 
+  * Upload to unstable.
   * Add a warning for using the new experimental feature for
     requesting the compat level via the Build-Depends field.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 25 Feb 2018 09:49:57 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 25 Feb 2018 10:05:22 +0000
 
 debhelper (11.1.5~alpha1) experimental; urgency=medium
 
