autopkgtests: Remove now broken use-name test
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ debhelper (11.1.6) UNRELEASED; urgency=medium
     (see 11.1.5~alpha1).  Thanks to Andreas Beckmann for reporting
     the issue.  (Closes: #891546)
   * dh: Refactor handling of sequences to simplify some code paths.
+  * autopkgtests: Remove "use-name" tests as it no longer works.
+    The debhelper module makes assumptions in which directory it is
+    run from and the test breaks these assumptions.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 26 Feb 2018 19:32:52 +0000
 
