--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ debhelper (11.1.6) UNRELEASED; urgency=medium
     make-guile.  On the other hand, it is useful for people
     backporting debhelper on derivatives and hench leaving it as a
     comment.  (Closes: #892586)
+  * debian/control: Bump dependency on dh-autoreconf for the fix for
+    #889567.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 26 Feb 2018 19:32:52 +0000
 
