dh_installinfo: Accept --sourcedir as documented
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -663,6 +663,9 @@ and B<dh_installman> now accept the parameter B<--sourcedir> with same
 meaning as B<dh_install>. Furthermore, they now also fall back to
 F<debian/tmp> like B<dh_install>.
 
+Migration note: A bug in debhelper 11 up to 11.1.5 made
+B<dh_installinfo> incorrectly ignore B<--sourcedir>.
+
 =item -
 
 The B<perl-makemaker> and B<perl-build> build systems no longer pass
