--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,10 @@ debhelper (11.1.6) UNRELEASED; urgency=medium
     comment.  (Closes: #892586)
   * debian/control: Bump dependency on dh-autoreconf for the fix for
     #889567.
+  * dh_installinfo: Accept --sourcedir like the documentation says
+    for compat 11.  Prevently the option was incorrectly silently
+    ignored.  Thanks to Nicolas Boulenguez for the report and the
+    patch.  (Closes: #894226)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 26 Feb 2018 19:32:52 +0000
 
