dh_ucf.1: Document --all + non-option parameters
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,9 @@ debhelper (11.1.6) UNRELEASED; urgency=medium
     for compat 11.  Prevently the option was incorrectly silently
     ignored.  Thanks to Nicolas Boulenguez for the report and the
     patch.  (Closes: #894226)
+  * dh_ucf.1: Apply patch from Nicolas Boulenguez to add missing
+    documentation of the "--all" and non-option parameters.
+    (Closes: #894228)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 26 Feb 2018 19:32:52 +0000
 
