dh_installxfonts: Fix unreproducible maintscripts
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,10 @@ debhelper (11.1.6) UNRELEASED; urgency=medium
   * dh_ucf.1: Apply patch from Nicolas Boulenguez to add missing
     documentation of the "--all" and non-option parameters.
     (Closes: #894228)
+  * dh_installxfonts: Apply patch from Nicolas Boulenguez.  This
+    ensures that the generated maintscript snippets are bit-for-bit
+    reproducible when a package ships xfons in multiple fonts
+    directories.  (Closes: #894227)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 26 Feb 2018 19:32:52 +0000
 
