dh_installinfo: Report installed files to dh_missing
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,9 @@ debhelper (11.1.6) UNRELEASED; urgency=medium
     that ".."-segments are now disallowed in the link name (but not
     the link target).  Thanks to Nicolas Boulenguez for reporting
     the bug plus the test cases.  (Closes: #894229)
+  * dh_installinfo: Report installed files to dh_missing.  Thanks
+    to Daniel Kahn Gillmor for reporting this omission.
+    (Closes: #893160)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 26 Feb 2018 19:32:52 +0000
 
