Dh_Lib: Avoid load-time dependency on d/control
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,8 @@ debhelper (11.1.6) UNRELEASED; urgency=medium
   * dh_installinfo: Report installed files to dh_missing.  Thanks
     to Daniel Kahn Gillmor for reporting this omission.
     (Closes: #893160)
+  * Dh_Lib: Make Dh_Lib loadable again without a debian/control being
+    present.  This makes the autopkgtests work again.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 26 Feb 2018 19:32:52 +0000
 
