--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.1.6) UNRELEASED; urgency=medium
+debhelper (11.1.6) unstable; urgency=medium
 
   * Dh_Lib: Avoid passing invalid parameters to a function, which
     caused tons of "package ARRAY(...) is not in control info"
@@ -42,7 +42,7 @@ debhelper (11.1.6) UNRELEASED; urgency=medium
   * Dh_Lib: Make Dh_Lib loadable again without a debian/control being
     present.  This makes the autopkgtests work again.
 
- -- Niels Thykier <niels@thykier.net>  Mon, 26 Feb 2018 19:32:52 +0000
+ -- Niels Thykier <niels@thykier.net>  Thu, 29 Mar 2018 19:26:59 +0000
 
 debhelper (11.1.5) unstable; urgency=medium
 
