debhelper.pod: Add a ~ to the versioned depends
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -294,7 +294,7 @@ Your package will also need a versioned build dependency on a version of
 debhelper equal to (or greater than) the compatibility level your package
 uses. So for compatibility level #RECOMMENDED_COMPAT#, ensure debian/control has:
 
-  Build-Depends: debhelper (>= #RECOMMENDED_COMPAT#)
+  Build-Depends: debhelper (>= #RECOMMENDED_COMPAT#~)
 
 Unless otherwise indicated, all debhelper documentation assumes that you
 are using the most recent compatibility level, and in most cases does not
