--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (11.1.7) UNRELEASED; urgency=medium
+
+  * debhelper.7: Add a ~ to the suggested Build-Depends to ensure
+    backports also work for debhelper with single integer versions.
+    Thanks to Trent W. Buck for the suggestion.  (Closes: #894666)
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 04 Apr 2018 05:14:35 +0000
+
 debhelper (11.1.6) unstable; urgency=medium
 
   * Dh_Lib: Avoid passing invalid parameters to a function, which
