dh_installxfonts: fix typo causing a misc:Depends on non-existing xfont-utils
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 debhelper (11.1.7) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * debhelper.7: Add a ~ to the suggested Build-Depends to ensure
     backports also work for debhelper with single integer versions.
     Thanks to Trent W. Buck for the suggestion.  (Closes: #894666)
+
+  [ Nicolas Boulenguez ]
+  * dh_installxfonts: Fix typo that causes a misc:Depends on
+    non-existing xfont-utils.  (Closes: #894835)
 
  -- Niels Thykier <niels@thykier.net>  Wed, 04 Apr 2018 05:14:35 +0000
 
