--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ debhelper (11.1.7) UNRELEASED; urgency=medium
   * debhelper.7: Add a ~ to the suggested Build-Depends to ensure
     backports also work for debhelper with single integer versions.
     Thanks to Trent W. Buck for the suggestion.  (Closes: #894666)
+  * makefile.pm: Use -Oline with make.  This avoids make mistaking
+    a target name for a value for -O and should make build time
+    outs less likely for "long" targets.  (Closes: #894573)
 
   [ Nicolas Boulenguez ]
   * dh_installxfonts: Fix typo that causes a misc:Depends on
