Lower the version restrictions on dpkg and dpkg-dev
They are not needed anymore, as R³ support is not implied anymore, but
requires an environment variable to be passed.

Signed-off-by: Mattia Rizzolo <mattia@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,11 @@ debhelper (11.1.7) UNRELEASED; urgency=medium
   * dh_installxfonts: Fix typo that causes a misc:Depends on
     non-existing xfont-utils.  (Closes: #894835)
 
+  [ Mattia Rizzolo ]
+  * Lower the version restrictions on dpkg and dpkg-dev.  They are not
+    needed anymore, as R³ support is not implied anymore, but requires
+    an environment variable to be passed.
+
  -- Niels Thykier <niels@thykier.net>  Wed, 04 Apr 2018 05:14:35 +0000
 
 debhelper (11.1.6) unstable; urgency=medium
