dh_installwm.1: Document --all
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ debhelper (11.2) UNRELEASED; urgency=medium
   [ Nicolas Boulenguez ]
   * dh_installxfonts: Fix typo that causes a misc:Depends on
     non-existing xfont-utils.  (Closes: #894835)
+  * dh_installwm.1: Document --all.  (Closes: #895011)
 
   [ Mattia Rizzolo ]
   * Lower the version restrictions on dpkg and dpkg-dev.  They are not
