--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,9 @@ debhelper (11.2) UNRELEASED; urgency=medium
     suggestion.  (Closes: #895044)
   * meson.pm: Rewrite as a generator build system with ninja as
     the only backend.
+  * debhelper.7: Recommend packagers to use "debian/<pkg>.<file>"
+    over "debian/<file>" in most cases.  Thanks to Johannes
+    Schauer for the suggestion.
 
   [ Nicolas Boulenguez ]
   * dh_installxfonts: Fix typo that causes a misc:Depends on
