--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,9 @@ debhelper (11.2) UNRELEASED; urgency=medium
   * dh_installxfonts: Fix typo that causes a misc:Depends on
     non-existing xfont-utils.  (Closes: #894835)
   * dh_installwm.1: Document --all.  (Closes: #895011)
+  * dh_usrlocal: Fix bug where the generated prerm script generated
+    by dh_usrlocal could remove a directory directly in /usr/local.
+    (Closes: #894549)
 
   [ Mattia Rizzolo ]
   * Lower the version restrictions on dpkg and dpkg-dev.  They are not
