dh_usrlocal: Use default owner+mode from Policy v4.1.4
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ debhelper (11.2) UNRELEASED; urgency=medium
     Schauer for the suggestion.
   * dh_usrlocal: Implement a simple guard for directories that
     will likely cause issues in the shell snippets.
+  * dh_usrlocal: Use the new rules from Debian Policy 4.1.4 to
+    determine the default ownership and mode for directories.
 
   [ Nicolas Boulenguez ]
   * dh_installxfonts: Fix typo that causes a misc:Depends on
