--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ debhelper (11.2) UNRELEASED; urgency=medium
     will likely cause issues in the shell snippets.
   * dh_usrlocal: Use the new rules from Debian Policy 4.1.4 to
     determine the default ownership and mode for directories.
+  * d/control: Bump Standards-Versions to 4.1.4.  Beyond the
+    dh_usrlocal change listed above, no changes were required.
 
   [ Nicolas Boulenguez ]
   * dh_installxfonts: Fix typo that causes a misc:Depends on
