d/changelog: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,7 +12,7 @@ debhelper (11.2) UNRELEASED; urgency=medium
     plus debugging the issue.  (Closes: #894895)
   * Buildsystem.pm: Rewrite to support build systems that generate
     build files for another build system (without using
-    inheritenece).  This enables generator build systems to have
+    inheritance).  This enables generator build systems to have
     multiple backends.
   * cmake.pm: Support ninja as alternative backend (by using the
     build system cmake+ninja).  Thanks to Kyle Edwards for the
