--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.2) UNRELEASED; urgency=medium
+debhelper (11.2) unstable; urgency=medium
 
   [ Niels Thykier ]
   * debhelper.7: Add a ~ to the suggested Build-Depends to ensure
@@ -42,7 +42,7 @@ debhelper (11.2) UNRELEASED; urgency=medium
     needed anymore, as R³ support is not implied anymore, but requires
     an environment variable to be passed.
 
- -- Niels Thykier <niels@thykier.net>  Wed, 04 Apr 2018 05:14:35 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 07 Apr 2018 19:23:32 +0000
 
 debhelper (11.1.6) unstable; urgency=medium
 
