Buildsystem: Pass more methods to target buildsystems
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (11.2.1) UNRELEASED; urgency=medium
+
+  * Buildsystem.pm: Correctly pass build directory values to
+    target buildsystems.  Thanks to Helmut Grohne, Adrian Bunk
+    and Tobias Frost for the reports and debugging.
+    (Closes: #895174, #895181)
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 07:13:22 +0000
+
 debhelper (11.2) unstable; urgency=medium
 
   [ Niels Thykier ]
