--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.2.1) UNRELEASED; urgency=medium
+debhelper (11.2.1) unstable; urgency=medium
 
   * Buildsystem.pm: Correctly pass build directory values to
     target buildsystems.  Thanks to Helmut Grohne, Adrian Bunk
@@ -12,7 +12,7 @@ debhelper (11.2.1) UNRELEASED; urgency=medium
     choose such a build system if there is a build directory
     to remove.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 07:13:22 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 08:47:35 +0000
 
 debhelper (11.2) unstable; urgency=medium
 
