Buildsystem.pm: Fix use of undefined variable
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (11.2.2) UNRELEASED; urgency=medium
+
+  * Buildsystem.pm: Fix use of undefined variable in certain
+    error conditions.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 09:40:32 +0000
+
 debhelper (11.2.1) unstable; urgency=medium
 
   * Buildsystem.pm: Correctly pass build directory values to
