Document the dh_makeshlibs changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -728,6 +728,16 @@ Changes from v11 are:
 
 =item -
 
+The B<dh_makeshlibs> tool now generates shlibs files with versioned
+dependency by default.  This means that B<-VUpstream-Version>
+(a.k.a. B<-V>) is now the default.
+
+If an unversioned dependency in the shlibs file is wanted, this can be
+obtained by passing B<-VNone> instead.  However, please see
+L<dh_makeshlibs(1)> for the caveat of unversioned dependencies.
+
+=item -
+
 The B<-s> (B<--same-arch>) option is removed.  Please use B<-a> (B<--arch>) instead.
 
 =item -
