dh_listpackages.1: Document output order of packages
[nthykier: Use "listed" rather than "returned" as the paragraph above
also use "list"]
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,11 @@ debhelper (11.3) UNRELEASED; urgency=medium
   * cmake: Pass CC/CXX environment variables down during native
     compilation as well. (Closes: #897083)
 
+  [ Chris Lamb ]
+  * dh_listpackages.1: Document that packages are listed in the
+    order that they appear in debian/control.
+    (Closes: #897949)
+
  -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 09:40:32 +0000
 
 debhelper (11.2.1) unstable; urgency=medium
