dh_missing.1: Fix a contradiction about --list-missing in c12
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,10 @@ debhelper (11.3) UNRELEASED; urgency=medium
     which can happen in dh_builddeb has to correct the
     extension of a binary package built by dpkg-deb.
     Thanks to Evan Krall for the report.  (Closes: #897569)
+  * dh_missing.1: Consistently mention that dh_missing
+    defaults to --list-missing in compat 12.  Thanks to
+    Robie Basak for spotting the contradicting documentation.
+    (Closes: #898161)
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
