--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,11 @@ debhelper (11.3) UNRELEASED; urgency=medium
     order that they appear in debian/control.
     (Closes: #897949)
 
+  [ Peter Pentchev ]
+  * Dh_Lib: Permit leading and trailing whitespace around the
+    debhelper-compat dependency when it is the first or the last
+    relation listed.  (Closes: #897937)
+
  -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 09:40:32 +0000
 
 debhelper (11.2.1) unstable; urgency=medium
