--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,11 @@ debhelper (11.3) UNRELEASED; urgency=medium
     defaults to --list-missing in compat 12.  Thanks to
     Robie Basak for spotting the contradicting documentation.
     (Closes: #898161)
+  * dh_compress:  Avoid adding a duplicate ".gz" extension on
+    a symlink if it already has it.   This can happen e.g. with
+    dh_installman recompresses a manpage that was compressed and
+    had a valid symlink to it.  Thanks to Andreas Hasenack for
+    reporting the bug.  (Closes: LP: #1765851)
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
