d/control: Add dependency on dwz
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ debhelper (11.3) UNRELEASED; urgency=medium
     dh_installman recompresses a manpage that was compressed and
     had a valid symlink to it.  Thanks to Andreas Hasenack for
     reporting the bug.  (Closes: LP: #1765851)
+  * debian/control: Depend on dwz for dh_dwz.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
