d/changelog: Tweak changelog line
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,8 +31,8 @@ debhelper (11.3) UNRELEASED; urgency=medium
   * dh_dwz: Generate a per-package multifile by default.  This
     feature can be disabled by --no-multifile.
   * dh: Run dh_dwz by default in compat 12.
-  * dh_dwz/dwz.pm: Remove warning about the dwz feature being
-    experimental.
+  * dh_dwz: Remove warning about the dwz feature being experimental.
+  * dwz.pm: Ditto.
   * dh_installsystemd: Use the basename of the "tmpfiles" config
     files.  This makes "systemd-tmpfiles --create" search for it
     in both /usr/lib/tmpfiles.d and in /etc/tmpfiles.d.  With
