dh_dwz: Rename --multifile to --dwz-multifile
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,7 +29,7 @@ debhelper (11.3) UNRELEASED; urgency=medium
     reporting the bug.  (Closes: LP: #1765851)
   * debian/control: Depend on dwz for dh_dwz.
   * dh_dwz: Generate a per-package multifile by default.  This
-    feature can be disabled by --no-multifile.
+    feature can be disabled by --no-dwz-multifile.
   * dh: Run dh_dwz by default in compat 12.
   * dh_dwz: Remove warning about the dwz feature being experimental.
   * dwz.pm: Ditto.
