--- a/debhelper.pod
+++ b/debhelper.pod
@@ -791,6 +791,13 @@ if the ELF binary has a SONAME (containing ".so").
 The B<dh_compress> tool no longer compresses examples (i.e. anything installed
 in F<</usr/share/doc/I<package>/examples>>.)
 
+=item -
+
+The standard sequence in B<dh> now includes B<dh_dwz> by default.  This makes
+the B<dwz> sequence obsolete and it will now fail with an error.  If you want
+to skip B<dh_dwz>, then please insert an empty I<override_dh_dwz> target in
+F<debian/rules>.
+
 =back
 
 =back
