dh_usrlocal: Fix POD markup
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -66,6 +66,9 @@ debhelper (11.3) UNRELEASED; urgency=medium
     debhelper-compat dependency when it is the first or the last
     relation listed.  (Closes: #897937)
 
+  [ Jakub Wilk ]
+  * dh_usrlocal: Fix invalid POD markup.
+
  -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 09:40:32 +0000
 
 debhelper (11.2.1) unstable; urgency=medium
