dh_md5sums: Keep empty md5sums files
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -47,6 +47,9 @@ debhelper (11.3) UNRELEASED; urgency=medium
     source package where available.  This avoids some cases of duplicated
     upstream changelogs.  Thanks to Evgeni Golov for the suggestion.
     (Closes: #513521)
+  * dh_md5sums: Stop deleting empty md5sums files as dpkg (now) creates
+    the empty file on install if absent.  Thanks to Rhonda D'Vine for
+    suggesting the improvement.  (Closes: #776853)
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
