--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,7 @@ debhelper (11.3) UNRELEASED; urgency=medium
   * dh_md5sums: Stop deleting empty md5sums files as dpkg (now) creates
     the empty file on install if absent.  Thanks to Rhonda D'Vine for
     suggesting the improvement.  (Closes: #776853)
+  * Dh_Lib.pm: Re-organise exports.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
