dh_installinitramfs: New helper tool

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -798,6 +798,14 @@ the B<dwz> sequence obsolete and it will now fail with an error.  If you want
 to skip B<dh_dwz>, then please insert an empty I<override_dh_dwz> target in
 F<debian/rules>.
 
+=item -
+
+The B<dh_installinitramfs> tool automatically generates the maintainer
+script snippets when it detects an initramfs hook script in the package.
+
+Previously, it would only generate these snippets when it installed
+the hook itself.
+
 =back
 
 =back
