--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,9 @@ debhelper (11.3) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Re-organise exports.
   * Dh_Lib.pm: Retract "print_and_complex_doit"; the only potential
     consumer went with a different code snippet.
+  * dh_installinitramfs: New tool to install initramfs hook scripts and
+    handle related maintscripts.  Thanks to Evgeni Golov for the
+    suggestion.  (Closes: #491027)
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
