dh_installinit.1: Fix POD markup
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -68,6 +68,8 @@ debhelper (11.3) UNRELEASED; urgency=medium
     to make the latter independent of the former.  This makes it possible
     to load Buildsystem.pm without debian/control being present.  Thanks
     to Andreas Tille for the bug report.  (Closes: #897026)
+  * dh_installinit.1: Fix some incorrect markup in the documentation of
+    --no-enable.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
