--- a/debian/changelog
+++ b/debian/changelog
@@ -70,6 +70,9 @@ debhelper (11.3) UNRELEASED; urgency=medium
     to Andreas Tille for the bug report.  (Closes: #897026)
   * dh_installinit.1: Fix some incorrect markup in the documentation of
     --no-enable.
+  * makefile.pm: Revert the use of -O/-Oline for make, which helps
+    debugging what commands time out on the buildds.  Thanks to
+    Adrian Bunk for the report.  (Closes: #895196)
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
