dh_testroot.1: Update R³ documentation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -73,6 +73,9 @@ debhelper (11.3) UNRELEASED; urgency=medium
   * makefile.pm: Revert the use of -O/-Oline for make, which helps
     debugging what commands time out on the buildds.  Thanks to
     Adrian Bunk for the report.  (Closes: #895196)
+  * dh_testroot.1: Update R³ documentation to reflect the current
+    implementation and not the initial draft.  Thanks to Jens Reyer
+    for reporting the inconsistency.  (Closes: #899125)
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
