d/changelog: Retroactively add an LP closes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -76,6 +76,8 @@ debhelper (11.3) UNRELEASED; urgency=medium
   * dh_testroot.1: Update R³ documentation to reflect the current
     implementation and not the initial draft.  Thanks to Jens Reyer
     for reporting the inconsistency.  (Closes: #899125)
+  * d/changelog: Retroactively add Closes for LP bug #1766102 in 11.2
+    release.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
@@ -127,7 +129,7 @@ debhelper (11.2) unstable; urgency=medium
     outs less likely for "long" targets.  (Closes: #894573)
   * Dh_Lib.pm: Fix bug that make debhelper trip on packages with
     the version "0".  Thanks to Chris Lamb for reporting the bug
-    plus debugging the issue.  (Closes: #894895)
+    plus debugging the issue.  (Closes: #894895, LP: #1766102)
   * Buildsystem.pm: Rewrite to support build systems that generate
     build files for another build system (without using
     inheritance).  This enables generator build systems to have
