--- a/debian/changelog
+++ b/debian/changelog
@@ -81,7 +81,7 @@ debhelper (11.3) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Correct control parser to permit zero or more leading
     space after the "Section" field (instead of "exactly one" space).
   * python_distutils.pm: Deprecate the python-distutils build system
-    and mark it as removed in compat 12.  Users are recommeded to
+    and mark it as removed in compat 12.  Users are recommended to
     migrate to the third-party build system called "pybuild".  This
     deprecation implies that python3 (among other) will not be
     supported in the python-distutils build system.
