Dh_Lib: Remove warning for using B-D on debhelper-compat
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -86,6 +86,8 @@ debhelper (11.3) UNRELEASED; urgency=medium
     deprecation implies that python3 (among other) will not be
     supported in the python-distutils build system.
     (Closes: #568033, #597105, #597342, #769840, #813686, #898347)
+  * Dh_Lib.pm: Remove warning for using "debhelper-compat"
+    build-dependency.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
