--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.3) UNRELEASED; urgency=medium
+debhelper (11.3) unstable; urgency=medium
 
   [ Niels Thykier ]
   * Buildsystem.pm: Fix use of undefined variable in certain
@@ -110,7 +110,7 @@ debhelper (11.3) UNRELEASED; urgency=medium
   [ Jakub Wilk ]
   * dh_usrlocal: Fix invalid POD markup.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 09:40:32 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 20 May 2018 20:35:00 +0000
 
 debhelper (11.2.1) unstable; urgency=medium
 
