--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-debhelper (11.3.1) UNRELEASED; urgency=medium
+debhelper (11.3.1) unstable; urgency=medium
 
   * dh_installchangelogs: Fix logic error that made
     dh_installchangelogs incorrectly ignore explicitly passed
     changelogs.  Thanks to Sven Joachim and Rene Engelhard
     for reporting the bug.  (Closes: #899248)
 
- -- Niels Thykier <niels@thykier.net>  Mon, 21 May 2018 19:56:06 +0000
+ -- Niels Thykier <niels@thykier.net>  Mon, 21 May 2018 20:02:32 +0000
 
 debhelper (11.3) unstable; urgency=medium
 
