--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-debhelper (11.3.2) UNRELEASED; urgency=medium
+debhelper (11.3.2) unstable; urgency=medium
 
   * dh_installchangelogs: Fix a second regression that made
     dh_installchangelogs ignore upstream changelogs in the
     source directories.  Thanks to gregor herrmann for
     reporting the imcomplete fix.  (Closes: #899248)
 
- -- Niels Thykier <niels@thykier.net>  Wed, 23 May 2018 05:53:51 +0000
+ -- Niels Thykier <niels@thykier.net>  Wed, 23 May 2018 05:59:59 +0000
 
 debhelper (11.3.1) unstable; urgency=medium
 
