--- a/debhelper.pod
+++ b/debhelper.pod
@@ -197,7 +197,7 @@ Do not modify F<postinst>, F<postrm>, etc. scripts.
 =item B<-X>I<item>, B<--exclude=>I<item>
 
 Exclude an item from processing. This option may be used multiple times,
-to exclude more than one thing. The \fIitem\fR is typically part of a
+to exclude more than one thing. The I<item> is typically part of a
 filename, and any file containing the specified text will be excluded.
 
 =item B<-A>, B<--all>
