d/control: Remove versioned breaks on qt5-qmake to assist -backports
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (11.3.3) UNRELEASED; urgency=medium
+
+  * d/control: Remove versioned Breaks on qt5-qmake as it
+    prevents others from backporting qt5 packages to
+    stable-backports.  The Breaks was added to assist
+    cross-building in buster and it has already served that
+    purpose by now.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 10 Jun 2018 07:35:21 +0000
+
 debhelper (11.3.2) unstable; urgency=medium
 
   * dh_installchangelogs: Fix a second regression that made
