--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,16 @@
 debhelper (11.3.3) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * d/control: Remove versioned Breaks on qt5-qmake as it
     prevents others from backporting qt5 packages to
     stable-backports.  The Breaks was added to assist
     cross-building in buster and it has already served that
     purpose by now.
+
+  [ Roberto C. Sánchez ]
+  * cmake.pm: Reorder arguments to cmake to make "-D FOO=BAR"
+    work.  This form only works if it is before the directory
+    passed to cmake.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 10 Jun 2018 07:35:21 +0000
 
