--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,15 @@ debhelper (11.3.3) UNRELEASED; urgency=medium
     to Nadav Ruskin for the suggestion.  (Closes: #901715)
   * Dh_Lib.pm: Avoid forking a shell when running executable
     debhelper config files.
+  * Dh_Lib.pm: Validate package names according the rules for
+    Debian packages.  Thanks to Raphael Geissert and Tim
+    Düsterhus for the suggestion.  (Closes: #567178)
+  * Dh_Lib.pm: Rewrite deb822 parser to validate d/control
+    more strictly.  Particularly, debhelper no longer permits
+    the same field twice in a stanza.  Thanks to Tim Düsterhus
+    for the suggestion.
+  * Dh_Lib.pm: Ensure that at most once definition of
+    (X-)Package-Type is used per stanza.
 
   [ Roberto C. Sánchez ]
   * cmake.pm: Reorder arguments to cmake to make "-D FOO=BAR"
