dh_installsystemduser: New helper to handle systemd user instance units
Add a new 'dh_installsystemduser' helper responsible for istalling
package maintainer supplied systemd user instance units and to produce
postinst and postrm maintiner scripts code blocks to appropriately
enable, mask and disable units when the package is installed,
upgraded, or removed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (11.5) UNRELEASED; urgency=medium
+
+  [ Daniele Nicolodi ]
+  * dh_installsystemduser: New helper responsible for istalling package
+    maintainer supplied systemd user instance units and to produce
+    postinst and postrm maintiner scripts code blocks to appropriately
+    enable, mask and disable units when the package is installed,
+    upgraded, or removed.  (Closes: #764678)
+
+ -- Daniele Nicolodi <daniele@grinta.net>  Sun, 14 Oct 2018 10:13:17 -0600
+
 debhelper (11.4.1) unstable; urgency=medium
 
   [ Niels Thykier ]
