--- a/debhelper.pod
+++ b/debhelper.pod
@@ -915,6 +915,11 @@ packages and not only during the building process. Please set
 B<DH_GOLANG_EXCLUDES_ALL> to false to revert to the previous behaviour. See
 B<Debian::Debhelper::Buildsystem::golang(3pm)> for details and examples.
 
+=item -
+
+B<dh_installsystemduser> is now included in the B<dh> standard
+sequence by default.
+
 =back
 
 =back
