--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,15 @@ debhelper (11.3.3) UNRELEASED; urgency=medium
     work.  This form only works if it is before the directory
     passed to cmake.
 
+  [ Daniele Nicolodi ]
+  * dh_installsystemd: Improve man page.
+  * dh_installsystemd: Tighten error handling: fail immediately if an unit
+    name not installed by the package is specified on the command line.
+  * dh_installsystemd: Fix the undocumented '--no-also' command line
+    option to do not affect handling of the Alias= directives.
+  * dh_installsystemd: Add timer units to the list of units considered
+    when the '--name' option is specified.
+
  -- Niels Thykier <niels@thykier.net>  Sun, 10 Jun 2018 07:35:21 +0000
 
 debhelper (11.3.2) unstable; urgency=medium
