Dh_Lib: Provide a more helpful error message for exec-config files
Apparently the exec-bit is set by default in WSL, so provide a more
helpful error message when debhelper encounters a config file with the
exec-bit that does not have a #!-line (and is not an ELF binary).

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ debhelper (11.3.3) UNRELEASED; urgency=medium
     stable-backports.  The Breaks was added to assist
     cross-building in buster and it has already served that
     purpose by now.
+  * Dh_Lib.pm: Provide a more helpful diagnostic message when
+    an executable config file fails and it does not have a
+    #!-line (and is not an ELF binary).  Thanks to Nadav
+    Ruskin for the suggestion.  (Closes: #902214)
 
   [ Roberto C. Sánchez ]
   * cmake.pm: Reorder arguments to cmake to make "-D FOO=BAR"
