--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ debhelper (11.3.3) UNRELEASED; urgency=medium
     an executable config file fails and it does not have a
     #!-line (and is not an ELF binary).  Thanks to Nadav
     Ruskin for the suggestion.  (Closes: #902214)
+  * debhelper.pod: Make a dedicated subsection about executable
+    debhelper config files to make them more prominent.  Thanks
+    to Nadav Ruskin for the suggestion.  (Closes: #901715)
 
   [ Roberto C. Sánchez ]
   * cmake.pm: Reorder arguments to cmake to make "-D FOO=BAR"
