Dh_Lib: Avoid forking a shell for executable dh config files
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ debhelper (11.3.3) UNRELEASED; urgency=medium
   * debhelper.pod: Make a dedicated subsection about executable
     debhelper config files to make them more prominent.  Thanks
     to Nadav Ruskin for the suggestion.  (Closes: #901715)
+  * Dh_Lib.pm: Avoid forking a shell when running executable
+    debhelper config files.
 
   [ Roberto C. Sánchez ]
   * cmake.pm: Reorder arguments to cmake to make "-D FOO=BAR"
