--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.3.3) UNRELEASED; urgency=medium
+debhelper (11.3.3) unstable; urgency=medium
 
   [ Niels Thykier ]
   * d/control: Remove versioned Breaks on qt5-qmake as it
@@ -39,7 +39,7 @@ debhelper (11.3.3) UNRELEASED; urgency=medium
   * dh_installsystemd: Add timer units to the list of units considered
     when the '--name' option is specified.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 10 Jun 2018 07:35:21 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 23 Jun 2018 18:30:08 +0000
 
 debhelper (11.3.2) unstable; urgency=medium
 
