--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (11.3.4) UNRELEASED; urgency=medium
+
+  * Dh_Lib.pm: Fix bug that made the parser assign the wrong
+    value from the Build-Profiles field.  Thanks to Sven Joachim
+    for reporting the bug.  (Closes: #902268)
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 24 Jun 2018 08:19:16 +0000
+
 debhelper (11.3.3) unstable; urgency=medium
 
   [ Niels Thykier ]
