--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ debhelper (11.3.4) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Fix bug that made the parser assign the wrong
     value from the Build-Profiles field.  Thanks to Sven Joachim
     for reporting the bug.  (Closes: #902268)
+  * debhelper.pod: Rewrite the compat 11 change on "main doc
+    packages" in an attempt to clarify what is happening in
+    compat 11.  Thanks to Paul Gevers for pointing out some of
+    the confusing aspects.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 24 Jun 2018 08:19:16 +0000
 
