--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.3.4) UNRELEASED; urgency=medium
+debhelper (11.3.4) unstable; urgency=medium
 
   * Dh_Lib.pm: Fix bug that made the parser assign the wrong
     value from the Build-Profiles field.  Thanks to Sven Joachim
@@ -8,7 +8,7 @@ debhelper (11.3.4) UNRELEASED; urgency=medium
     compat 11.  Thanks to Paul Gevers for pointing out some of
     the confusing aspects.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 24 Jun 2018 08:19:16 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 24 Jun 2018 09:46:35 +0000
 
 debhelper (11.3.3) unstable; urgency=medium
 
